# skarabeusz

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
example/: Makefile.am  Makefile.in
image/: Makefile.am  Makefile.in
inc/: Makefile.am  Makefile.in  skarabeusz.h
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars.template  POTFILES  POTFILES.in  fi.gmo  fi.po  pl.gmo  pl.po  ru.gmo  ru.po  skarabeusz.pot
po/fi/: skarabeusz.mo  skarabeusz.po
po/pl/: skarabeusz.mo  skarabeusz.po  skarabeusz.po~
po/ru/: skarabeusz.mo  skarabeusz.po
src/: Makefile.am  Makefile.in  main.cc  skarabeusz.cc
